<resources>
    <string name="app_name">Conexa Hotspot</string>
    <string name="client_id">938060840044-m5vvv2008l514o953bphe5t1o59p06ej.apps.googleusercontent.com</string>
    <string name="hak"> ©2024| Hak Cipta dilindungi oleh Conexa Hotspot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="contact">We are ready to help anytime and anywhere. Please contact us anytime via:</string>
    <string name="email">conexamediaacces@gmail.com</string>
    <string name="whatsapps">0821-1674-7973</string>
    <string name="AppVersi">Conexa App | Version 2.0 </string>
    <string name="terhubung">Terhubung di Semua Titik Akses</string>
    <string name="lite">Hotspot Lite</string>
    <string name="hargalite">RP110.000</string>
    <string name="perangkatlite">3 Perangkat</string>
    <string name="pro">Hotspot Pro</string>
    <string name="hargapro">RP150.000</string>
    <string name="perangkatpro">4 Perangkat</string>
    <string name="max">Hotspot Max</string>
    <string name="hargamax">RP190.000</string>
    <string name="perangkatmax">5 Perangkat</string>
    <string name="ultra">Hotspot Ultra</string>
    <string name="hargaultra">RP230.000</string>
    <string name="perangkatultra">6 Perangkat</string>
    <string name="notfound">History Not Found!</string>
    <string name="descriptionforhistory">Please install the internet package listed.</string>
    <string name="aboutus">CONEXA MEDIA dengan brand CONEXA-Net adalah perusahaan Penyedia Jasa Akses Internet (Internet Service Provider / ISP)
        yang berfokus pada penyediaan layanan Internet Dedicated bagi Perusahaan, Pemerintahan, Pelaku Jual Kembali Jasa Telekomunikasi,
        dan Freelancer.Internet kini sudah menjadi kebutuhan mendasar bagi siapapun.
        Keterbatasan sumberdaya perusahaan internet broadband nasional mengakibatkan
        banyaknya kendala pengguna dalam rangka memenuhi kebutuhan akses internet,
        mulai dari permintaan layanan yang tidak bisa dipenuhi sampai penerapan
        Kebijakan Penggunaan Batas Wajar (Fair Usage Policy / FUP) yang mengakibatkan kecepatan Internet menurun signifikan.
        CONEXA - NET hadir sebagai alternatif sekaligus solusi bagi mereka yang membutuhkan akses internet Cepat, tanpa Tersendat namun tetap Hemat.
        Dengan layanan Internet Dedicated Kami, pengguna tidak perlu khawatir mengenai stabilitas dan kualitas akses internet.
        Bandwidth Kami distribusikan kepada pelanggan secara mandiri (Dedicated) tanpa dibagi dengan pengguna lain (Shared/Upto/Broadband)
        serta kecepatan upload dan download yang simetris 1:1 (bukan 1:4 atau 1:8).</string>
    <string name="instalasi">Instalasi Jaringan Internet</string>
    <string name="biaya">Biaya Pemasangan</string>
    <string name="deskripsi_paket">Deskripsi Paket</string>
    <string name="paket_internet_detail">• Paket Internet Conexa Breeze merupakan layanan internet rumah
        \n• Kecepatan Layanan Internet dengan speed 5 Mbps ratio 1:1 (Dedicated)
        \n• Biaya Instalasi dibebankan kepada pelanggan Baru
        \n• Harga sudah termasuk PPN</string>

    <string name="syarat_ketentuan">Syarat dan Ketentuan</string>
    <string name="syarat_ketentuan_detail">1. Harga Paket berlaku di semua coverage area Conexa
        \n2. Tagihan Internet akan ditagihkan pada tanggal 5
        \n3. Pelanggan dapat menikmati layanan unlimited tanpa FUP
        \n4. Pelanggan dapat menikmati layanan tanpa batasan kuota
        \n5. Conexa menyediakan ONT selama berlangganan
        \n6. Pelanggan dilarang menjual kembali layanan Conexa</string>
    <string name="descChangePassword">For the security of your account, \nplease update your password if you wish.</string>
    <string name="internet_los">
        1. \tPastikan tidak ada aplikasi berat( seperti download \n\tatau Streaming ) yang sedang berjalan.\n2. Matikan sementara perangkat lain yang terhubung \n\tke jaringan untuk memastikan bandwidth tidak \n\tterbagi.\n3. Lakukan tes kecepatan internet melalui aplikasi atau \n\tsitus speed test.\n4. Jika masih terasa lambat lakukan Restart trouter/\n\tmodem untuk menyegarkan koneksi.\n
    </string>
    <string name="not_koneksi">1. Pastikan perangkat terhubung ke jaringan Wi-Fi atau \n\tkabel LAN.
\n2. Jika menggunakan Wi-Fi, periksa apakah nama \n\tjaringan Wi-Fi (SSID) muncul di perangkat.
\n3. Jika menggunakan kabel LAN, periksa apakah kabel \n\tterpasang dengan baik di router dan perangkat.
\n4. Restart perangkat yang digunakan (ponsel, laptop, \n\tatau PC).</string>
    <string name="lampu_merah">1. Cek kabel fiber optic (FO) dari terminal optik hingga \n\trouter untuk memastikan tidak ada kabel yang \n\ttertekuk, patah, atau lepas.
                \n2. Pastikan konektor Kabel Fiber bersih dan terpasang \n\tdengan benar.
                \n3. Restart router atau modem
                \n4. Jika masalah berlanjut, hubungi teknisi Conexa</string>
    <string name="internet_lambat">Internet terasa lambat?</string>
    <string name="speed">Speed Test</string>
    <string name="sk">Setuju dengan Syarat dan Ketentuan yang berlaku.</string>
    <string name="conexa_promosi">Conexa Promotion</string>

    <!--    Pendaftaran pemasangan-->
    <string name="name">Nama</string>
    <string name="telp">No Telepon</string>
    <string name="alamat">Masukan alamat lengkap</string>
    <string name="pemasangan">Tanggal pemasangan</string>
    <string name="submit">Submit</string>
    <string name="kebijakan">Setuju dari Privasi dan kebijakan tertentu</string>


    <!--    Konfirmasi Pembayaran -->
    <string name="rincian">Rincian Informasi</string>
    <string name="nama_lengkap">Nama Lengkap </string>
    <string name="nama_admin">: Yusuf Septiana</string>
    <string name="no_telepon">No Telepon </string>
    <string name="telepon_admin">: 08x-xxx-xxx-xxx</string>
    <string name="alamats">Alamat </string>
    <string name="alamat_admin">: Dusun Pahing RT14 RW07 Desa Wilanagara, Kecamatan Luragung</string>
    <string name="paket">Paket :</string>
    <string name="total_pembayaran">Total Yang harus dibayar :</string>
    <string name="rekening_content">SILAHKAN LAKUKAN PEMBAYARAN MELALUI \nREKENING :</string>
    <string name="no_rekening">428001001476509 </string>
    <string name="nama_rekening">A/N YUSUF SEPTIANA </string>
    <string name="silahkan">KONFIRMASI PEMBAYARAN DENGAN MENGIRIM BUKTI TRANSFER KE ADMIN</string>
    <string name="button_konfirmasi">Konfirmasi pembayaran</string>
    <string name="pending_konfirmasi">Dibatalkan </string>


    <string name="history">List History Pemasangan paket</string>
    <string name="maintenance">Notifications are under development!</string>

    <!--DATA IDENTITTAS DEVELOPMENT-->

    <string name="development">Developer team Conexa Hotspot</string>
    <string name="nama_rifky">Rifky Dewani Yanuar</string>
    <string name="nim_rifky">:20220810096</string>
    <string name="nama_besla">Besla Andria Arshela</string>
    <string name="nim_besla">:20220810109</string>
    <string name="nama_yusuf">Yusuf Septiana</string>
    <string name="nim_yusuf">:20220810105</string>
</resources>


