<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    android:layout_marginHorizontal="24dp"
    android:id="@+id/konfirmasi">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rincian"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:padding="6dp"
            android:layout_margin="26dp"/>
        <LinearLayout
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_admin"
                android:fontFamily="@font/poppins"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_telepon"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telepon_admin"
                android:fontFamily="@font/poppins"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamats"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_admin"
                android:fontFamily="@font/poppins"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paket"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:id="@+id/show_paket"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Conexa Breeze"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>
        <TextView
            android:id="@+id/total_akumulasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_pembayaran"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:padding="6dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:padding="6dp"
            android:layout_marginHorizontal="26dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/no_rekening"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_rekening"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:padding="6dp"
                android:layout_marginHorizontal="26dp"/>
            <ImageView
                android:id="@+id/copy"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/outline_content_copy_24"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_rekening"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:padding="6dp"
            android:layout_marginHorizontal="26dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:padding="6dp"
            android:layout_marginHorizontal="26dp"/>
            <Button
                android:id="@+id/konfirmasi_whatapp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_custom"
                android:backgroundTint="@color/orange"
                android:text="@string/button_konfirmasi"
                android:fontFamily="@font/poppins"
                />

            <Button
                android:id="@+id/home"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_custom"
                android:fontFamily="@font/poppins"
                android:text="@string/pending_konfirmasi" />

    </LinearLayout>
</androidx.cardview.widget.CardView>