<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hotspot"
    android:layout_marginBottom="20dp"
    android:layout_marginHorizontal="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_location_on_24"
            android:layout_margin="14dp"/>

        <TextView
            android:id="@+id/nama_paket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/lite"
            android:fontFamily="@font/poppins_bold"/>
        <TextView
            android:id="@+id/p_inet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="10dp"
            android:text="@string/perangkatlite"
            android:fontFamily="@font/poppins_bold"/>
        <TextView
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/hargalite"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
