<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:id="@+id/layout_pemasangan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            app:startIconDrawable="@drawable/user"
            app:boxStrokeErrorColor="@color/error"
            android:hint="@string/name"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/user"
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutelepon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/outline_call_24"
            app:boxStrokeErrorColor="@color/error"
            android:hint="@string/telp"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_call_24"
                android:id="@+id/telepon"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoualamat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:boxStrokeErrorColor="@color/error"
            android:hint="@string/alamat"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutanggal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/outline_date_range_24"
            app:boxStrokeErrorColor="@color/error"
            android:hint="@string/pemasangan"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_date_range_24"
                android:id="@+id/tanggal_pemasangan"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kebijakan"/>
        <Button
            android:id="@+id/submit"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:backgroundTint="@color/orange"
            android:text="@string/submit"
            android:fontFamily="@font/poppins_medium"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />
</androidx.cardview.widget.CardView>