<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactPerson">

    <FrameLayout
        android:background="@color/bluedark"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_marginTop="56dp"
            android:layout_marginStart="20dp"
            android:background="@color/bluedark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"/>

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Person"/>
    </FrameLayout>


    <ImageView
        android:layout_width="302dp"
        android:layout_height="277dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:src="@drawable/animasi" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_marginTop="49dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/baseline_email_24" />

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/email" />
        <ImageView
            android:id="@+id/intentEmail"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/nowa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerVertical="true"
        android:layout_marginTop="49dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/whatsapp" />

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/whatsapps" />
        <ImageView
            android:id="@+id/intentWhatsapps"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/notelepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nowa"
        android:layout_centerVertical="true"
        android:layout_marginTop="49dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/baseline_local_phone_24" />
        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/whatsapps" />
        <ImageView
            android:id="@+id/intentPhone"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AppVersi"
        android:fontFamily="@font/poppins_bold"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"/>
</RelativeLayout>